🐛 :art: replace borders with outlines to avoid shifting while hovering :art: 🐛

--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -123,19 +123,17 @@ body.light-mode {
     }
   }
 
-  
-
   article {
     box-shadow: 0px 0px 2px 2px hsl(0, 0%, 75%);
     background-color: #e5e5e5;
-    border: none;
+    outline: 1px solid hsl(0, 0%, 75%);
   }
 
   a {
     color: #333;
   }
 
-  a:hover{
+  a:hover {
     color: #777;
   }
 }
@@ -225,21 +223,15 @@ body.light-mode {
 
 footer {
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   margin-top: auto;
   padding: 2rem;
-  // box-shadow: (
-  //     inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
-  //     0px 0px 21px 8px rgba(20, 246, 235, 0.1)
-  //   );
-
   .footer-logo {
-    margin: .5rem;
+    margin: 0.5rem;
     width: 2rem;
   }
 }
-
 
 /*-----------------------GLOBAL------------------------*/
 
@@ -257,8 +249,6 @@ a {
 }
 
 /*----------------------- HOMEPAGE-------------------- */
-
-
 
 section > h1 {
   justify-self: center;
@@ -278,12 +268,12 @@ article {
   margin: 1rem;
   width: 50vw;
   padding: 3rem;
-  border: 1px solid #14f6eb;
+  outline: 1px solid #14f6eb;
   background-color: transparent;
   transition: all 0.2s ease-in;
 
   &.homepage-article:hover {
-    border: 1px solid var(--clr-primary-500);
+    outline: 1px solid var(--clr-primary-500);
     box-shadow: 0px 8px 21px 8px var(--clr-primary-100);
     margin-block: 1rem;
     scale: 102%;
